fixed extra margins

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,7 +1,7 @@
 .catalog {
   display: grid;
   justify-content: center;
-  gap: 40px;
+  gap: 48px;
 
   &__card {
     display: flex;
@@ -11,7 +11,7 @@
     height: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 48px;
+    // margin-bottom: 48px;
   }
 
   @media (min-width:488px) {
@@ -24,9 +24,5 @@
 
   @media (min-width:1024px) {
     grid-template-columns: repeat(4, $card-width);
-  }
-
-  &__card:not(:nth-child(4n)) {
-    margin-right: 48px;
   }
 }
